--- a/.gitignore
+++ b/.gitignore
@@ -33,14 +33,14 @@ yarn-error.log*
 
 # local env files
 # do not commit any .env files to git, except for the .env.example file. https://create.t3.gg/en/usage/env-variables#using-environment-variables
-.env
-.env*.local
+# .env
+# .env*.local
 
 # vercel
-.vercel
+# .vercel
 
 # typescript
-*.tsbuildinfo
+# *.tsbuildinfo
 
 # idea files
-.idea
+# .idea
